fix: add vertical align, fix table header and body sync

--- a/react-components/src/components/Table/style.module.scss
+++ b/react-components/src/components/Table/style.module.scss
@@ -2,13 +2,11 @@
 
 .root {
   overflow: auto;
-  max-width: 100%;
   contain: strict;
 
   .table {
     position: relative;
     table-layout: fixed;
-    width: fit-content;
     text-align: left;
     border-collapse: collapse;
     border-spacing: 0;
@@ -17,9 +15,7 @@
 
     th,
     td {
-      background-color: var(--color-global-bgcard);
-      vertical-align: top;
-      transition: background-color 0.15s;
+      position: relative;
     }
 
     thead {
@@ -31,81 +27,86 @@
         z-index: 1;
       }
 
-      th {
-        @include fontCaptionBold;
+      tr {
+        display: grid;
+        grid-template-columns: var(--row-template-columns);
 
-        padding: var(--radius-10) var(--radius-8);
-        position: relative;
-        color: var(--color-text-60);
-        background-color: var(--color-text-5);
+        th {
+          @include fontCaptionBold;
 
-        &::after {
-          content: '';
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 1px;
+          padding: var(--spacing-10) var(--spacing-8);
+          position: relative;
+          color: var(--color-text-60);
           background-color: var(--color-text-5);
-        }
-
-        &:hover {
-          .resizer {
-            opacity: 1;
-          }
-        }
-
-        &.isSortable {
-          cursor: pointer;
-          transition: color 0.15s;
-
-          &:hover {
-            color: var(--color-text-90);
-          }
-        }
-
-        .thContent {
-          display: flex;
-          gap: var(--spacing-8);
-
-          > span {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-          }
-
-          &Icon {
-            flex: 0 0 16px;
-          }
-        }
-
-        .resizer {
-          position: absolute;
-          right: 0;
-          top: 0;
-          height: 100%;
-          width: var(--spacing-16);
-          cursor: col-resize;
-          user-select: none;
-          touch-action: none;
-          opacity: 0;
-          transition: opacity 0.15s, background-color 0.15s;
 
           &::after {
             content: '';
             position: absolute;
-            top: 0;
-            right: 0;
-            width: var(--spacing-4);
-            height: 100%;
-            background-color: var(--color-text-20);
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: var(--color-text-5);
           }
 
-          &IsResizing {
-            opacity: 1;
+          &:hover {
+            .resizer {
+              opacity: 1;
+            }
+          }
+
+          &.isSortable {
+            cursor: pointer;
+            transition: color 0.15s;
+
+            &:hover {
+              color: var(--color-text-90);
+            }
+          }
+
+          .thContent {
+            display: flex;
+            gap: var(--spacing-8);
+
+            > span {
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            }
+
+            &Icon {
+              flex: 0 0 16px;
+            }
+          }
+
+          .resizer {
+            position: absolute;
+            right: 0;
+            top: 0;
+            height: 100%;
+            width: var(--spacing-16);
+            cursor: col-resize;
+            user-select: none;
+            touch-action: none;
+            opacity: 0;
+            transition: opacity 0.15s, background-color 0.15s;
 
             &::after {
-              background: var(--color-primary-50);
+              content: '';
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: var(--spacing-4);
+              height: 100%;
+              background-color: var(--color-text-20);
+            }
+
+            &IsResizing {
+              opacity: 1;
+
+              &::after {
+                background: var(--color-primary-50);
+              }
             }
           }
         }
@@ -113,7 +114,6 @@
     }
 
     tbody {
-      display: inherit;
       position: absolute;
       top: 0;
       left: 0;
@@ -121,14 +121,17 @@
       transform: translateY(var(--tbody-transform));
 
       tr {
-        width: 100%;
-        display: flex;
+        display: grid;
+        grid-template-columns: var(--row-template-columns);
 
         td {
           @include fontBody3;
 
+          display: flex;
+          align-items: var(--vertical-align);
           position: relative;
           color: var(--color-text-90);
+          background-color: var(--color-global-bgcard);
 
           &::after {
             content: '';
@@ -142,14 +145,14 @@
           }
 
           &:not(:has(input)) {
-            padding: var(--radius-6) var(--radius-8);
+            padding: var(--spacing-6) var(--spacing-8);
           }
 
           &.resetPadding {
             padding: 0;
           }
 
-          .tdContent {
+          > .tdContent {
             display: -webkit-box;
             -webkit-line-clamp: var(--cell-vert-clamp);
             -webkit-box-orient: vertical;
